--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1"
